Changed logic methods findAvailableProperties() and readPropertiesByPath(String path)